# pdf-ai-context-extractor

./: .gitignore  AI-CONTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LOCALE_IMPLEMENTATION.md  MANIFEST.in  PROJECT_SUMMARY.md  README.md  pyproject.toml  quick_setup.sh  setup.py
.github/workflows/: ci.yml
examples/: run_examples.py
src/pdf_ai_context_extractor/: __init__.py  cli.py  core.py  locale_detector.py  parsers.py
tests/: generate_samples.py  test_extractor.py
